# R-Type_Train

./: .gitignore  CMakeLists.txt  compile.sh
Client/: CMakeLists.txt
Client/src/: main.cpp
Server/: CMakeLists.txt
Server/src/: main.cpp
